# abastecimento-spin-v2

./: .gitignore  CMakeLists.txt  README.md  abastecimento_spin  abastecimento_spin.c  abastecimento_spin.csv  spin_window copy.cmb  spin_window copy.ui  spin_window.cmb  spin_window.cmb.old1  spin_window.ui  spin_window.ui.old1  teste_deepseek.ui  teste_qwen.ui
.zed/: debug.json
db/: abastecimento_spin.csv  spin.sqlite
include/: init_gtk.h  spin_window.h  stdpasi.h
lib/: init_gtk.c  spin_window.c  stdpasi.c  stdpasi.h
